# corruptmnist_cookiecutter

./: .gitignore  Makefile  README.md  data.dvc  environment.yml  pyproject.toml
.dvc/: config
corruptmnist_cookiecutter/: __init__.py  predict_model.py  pyproject.toml  train_model.py
corruptmnist_cookiecutter/data/: make_dataset.py
corruptmnist_cookiecutter/models/: model.py
corruptmnist_cookiecutter/visualizations/: visualize.py
data/processed/corruptmnist_cookiecutter/: train_target.pt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
